--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Axonevo - Prontuário Médico</title>
+    
+    <!-- PWA Manifest & Theme -->
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- iOS PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg viewBox='0 0 256 256' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='256' height='256' fill='black'/%3E%3Cpath d='M32 128H80L90 108L100 148L115 68L130 188L176 128' stroke='%234ade80' stroke-width='16' stroke-linecap='round' stroke-linejoin='round'/%3E%3Crect x='184' y='104' width='16' height='48' fill='%234ade80' rx='4'/%3E%3C/svg%3E">
+    
     <link rel="icon" href="data:image/svg+xml,%3Csvg width='256' height='256' viewBox='0 0 256 256' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='256' height='256' fill='black'/%3E%3Cpath d='M32 128H80L90 108L100 148L115 68L130 188L176 128' stroke='%234ade80' stroke-width='16' stroke-linecap='round' stroke-linejoin='round'/%3E%3Crect x='184' y='104' width='16' height='48' fill='%234ade80' rx='4'/%3E%3C/svg%3E" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -2000,6 +2011,20 @@ root.render(
   </React.StrictMode>
 );
 
+    </script>
+    <script>
+      // Service Worker Registration
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(registration => {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            })
+            .catch(error => {
+              console.log('ServiceWorker registration failed: ', error);
+            });
+        });
+      }
     </script>
   </body>
 </html>
